# claude-statusline

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: config.rs  main.rs
