[package]
name = "claude-statusline"
version = "0.1.0"
authors = ["Andy Dirnberger <andy.dirnberger@gmail.com>"]
edition = "2024"
description = "A customized statusline for Claude Code"
readme = "README.md"
repository = "https://github.com/dirn/claude-statusline"
license = "MIT"

[dependencies]
ansi_term = "0.12.1"
millisecond = "0.15.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
